Gsafe/GsafeV3_net_OTA/build/log/idf_py_stdout_output_19384
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\CODE\ESP32-IDF\esp32-idf-studying\GsafeV3_net_OTA\build\bootloader\esp-idf\esptool_py && C:\Users\daoph\.espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/CODE/ESP32-IDF/esp32-idf-studying/GsafeV3_net_OTA/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/10] Building C object esp-idf/esp_https_ota/CMakeFiles/__idf_esp_https_ota.dir/src/esp_https_ota.c.obj
FAILED: esp-idf/esp_https_ota/CMakeFiles/__idf_esp_https_ota.dir/src/esp_https_ota.c.obj 
ccache C:\Users\daoph\.espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -ID:/CODE/ESP32-IDF/esp32-idf-studying/GsafeV3_net_OTA/build/config -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_https_ota/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/heap/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/log/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/soc/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/hal/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_http_client/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/bootloader_support/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/bootloader_support/bootloader_flash/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_app_format/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_event/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/app_update/include -IC:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/CODE/ESP32-IDF/esp32-idf-studying/GsafeV3_net_OTA=. -fmacro-prefix-map=C:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/esp_https_ota/CMakeFiles/__idf_esp_https_ota.dir/src/esp_https_ota.c.obj -MF esp-idf\esp_https_ota\CMakeFiles\__idf_esp_https_ota.dir\src\esp_https_ota.c.obj.d -o esp-idf/esp_https_ota/CMakeFiles/__idf_esp_https_ota.dir/src/esp_https_ota.c.obj -c C:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_https_ota/src/esp_https_ota.c
C:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_https_ota/src/esp_https_ota.c: In function 'esp_https_ota_begin':
C:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_https_ota/src/esp_https_ota.c:372:32: error: '__http_client' undeclared (first use in this function); did you mean 'esp_http_client'?
  372 |     esp_http_client_set_header(__http_client, "x-ESP32-STA-MAC", "10521C761794");
      |                                ^~~~~~~~~~~~~
      |                                esp_http_client
C:/Users/daoph/.espressif/frameworks/esp-idf-v5.0.1/components/esp_https_ota/src/esp_https_ota.c:372:32: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
